correct spacing under upper nav #346

--- a/app/assets/styles/_index.scss
+++ b/app/assets/styles/_index.scss
@@ -47,6 +47,15 @@
   float: right;
 }
 
+.index-container {
+  @include breakpoint(medium down) {
+    padding: 1rem 0 0 0;
+    section > .caption-container {
+        padding: 0 4px;
+    }
+  }
+}
+
 /* Tool finder, Cluster workload section */
 .liveTableContainer {
   background-clip: content-box;
